# bmstu_inf_hw

flita_1/: db.txt  tool  tool.c
flita_1/tool.dSYM/Contents/Resources/DWARF/: tool
flita_2/: Colours.dot  input.txt  tool  tool.c
flita_2/tool.dSYM/Contents/Resources/DWARF/: tool
flita_3/: check_connected.txt  check_disconnected.txt  tool.c
flita_4/: analysis.py  gen.py  solver.py
rk_1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  typespeed_iu
rk_1/include/: game_logic.h  text_loader.h  timer.h
rk_1/sample_texts/: lorem.txt
rk_1/src/: game_logic.c  main.c  text_loader.c  timer.c
sem 1/: task_1  task_2  task_2.c  task_3  task_3.c
sem 10/city_database/: CMakeLists.txt  README.md  hash_table.h  main.c
sem 10/unique/: CMakeLists.txt  README.md  main.c  tree.h
sem 2/: task_1  task_1.c  task_2  task_2.c  task_3  task_3.c
sem 3/: task1  task1.c  task2  task2.c  task3  task3.c
sem 3/task1.dSYM/Contents/Resources/DWARF/: task1
sem 4/: CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  SEM4  cmake_install.cmake  main.c  task1.h  task2.h
sem 6/: CMakeLists.txt  README.md  main.c  task1.h  task2.h  task3.h  task4.h
sem 7/: CMakeLists.txt  README.md  main.c  task1.h  task2.h
sem 8/: CMakeLists.txt  README.md  main.c  task1.h  task2.h
